--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Livvic:wght@500&display=swap');
 
 /* Section one styling */
+body {
+    margin: 0;
+}
 
 .home-section-one {
     background: #014E56;
