finished project for now

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -508,7 +508,7 @@ header {
     transition-timing-function: ease-in-out;
 }
 
-.plus-sign-nikita:hover,.plus-sign-cristian:hover,.plus-sign-cristian:hover {
+.plus-sign-nikita:hover,.plus-sign-cristian:hover,.plus-sign-cristian:hover,.plus-sign-cruz:hover,.plus-sign-drake:hover,.plus-sign-griffin:hover,.plus-sign-aden:hover {
     background-color: #c4fffe;
 }
 
